styles/content_scripts.css
/* replies */
body.replies-hide [data-testid="replyBtn"] > div,
body.replies-hover [data-testid="replyBtn"]:not(:hover) > div,
/* reposts */
body.reposts-hide [data-testid="repostCount"],
body.reposts-hover [data-testid="repostBtn"]:not(:hover) > div:nth-child(2),
body.reposts-hide [data-testid="repostCount-expanded"] > span:first-child,
body.reposts-hover
  [data-testid="repostCount-expanded"]:not(:hover)
  > span:first-child,
body.reposts-hide [data-testid="quoteCount-expanded"] > span:first-child,
body.reposts-hover
  [data-testid="quoteCount-expanded"]:not(:hover)
  > span:first-child,
/* likes */
body.likes-hide [data-testid="likeBtn"] > div:nth-child(2),
body.likes-hide [data-testid^="likeCount"] > span:first-child,
body.likes-hover [data-testid="likeBtn"]:not(:hover) > div:nth-child(2),
body.likes-hover [data-testid^="likeCount"]:not(:hover) > span:first-child,
/* bookmarks */
body.bookmarks-hide [data-testid="bookmarkCount-expanded"] > span:first-child,
body.bookmarks-hover [data-testid="bookmarkCount-expanded"]:not(:hover) > span:first-child,
/* followers */
body.followers-hide
  [data-testid="profileHeaderFollowersButton"]
  > span:first-child,
body.followers-hover
  [data-testid="profileHeaderFollowersButton"]:not(:hover)
  > span:first-child,
/* follows */
body.following-hide
  [data-testid="profileHeaderFollowsButton"]
  > span:first-child,
body.following-hover
  [data-testid="profileHeaderFollowsButton"]:not(:hover)
  > span:first-child,
/* posts */
body.posts-hide [data-testid="profileHeaderFollowsButton"] + div,
body.posts-hover [data-testid="profileHeaderFollowsButton"] + div:not(:hover) {
  visibility: hidden;
}

/* always show 'posts' unit in profile */
[data-testid="profileHeaderFollowsButton"] + div > span {
  visibility: visible !important;
}

/* messages */
body.messages-hide a[href="/messages"] > div > div > div,
body.messages-hover a[href="/messages"]:not(:hover) > div > div > div,
/* notifications */
body.notifications-hide a[href="/notifications"] > div > div > div,
body.notifications-hover
  a[href="/notifications"]:not(:hover)
  > div
  > div
  > div {
  color: rgba(0, 0, 0, 0) !important;
  width: 15px;
  white-space: nowrap;
}

/* messages sp-view */
body.messages-hide .r-19urhcx:nth-child(3) > div > div,
body.messages-hover .r-19urhcx:nth-child(3):not(:hover) > div > div,
/* notifications sp-view */
body.notifications-hide .r-19urhcx:nth-child(4) > div > div,
body.notifications-hover .r-19urhcx:nth-child(4):not(:hover) > div > div {
  visibility: hidden;
}

/* notifications-list */
/* single user (who liked your post) */
body.notifications-list-hide
  [data-testid="notificationsScreen"]
  [role="link"][data-testid^="feedItem-by-"]
  > div:nth-child(3)
  > div:nth-child(3)[dir="auto"],
/* multiple user (who and n others liked your post) */
body.notifications-list-hide
  [data-testid="notificationsScreen"]
  [role="link"][data-testid^="feedItem-by-"]
  > div:nth-child(3)
  > div
  > div:nth-child(3)[dir="auto"] {
  visibility: hidden;
  height: 2px;
  width: 1px;
}

/* suggested-for-you */
body.suggested-for-you-hide
  div[data-testid="postsFeed-flatlist"]
  .css-g5y9jx:has(
    > .css-g5y9jx.r-12vffkv
      > .css-g5y9jx.r-12vffkv
      > button.css-g5y9jx.r-1loqt21.r-1otgn73
  ) {
  display: none;
}

/* blueswan emoji */
body.blueswan-show nav > div:first-child:has(button[role="button"]) {
  &::after {
    content: "　💙🦢";
  }
  &:hover {
    text-decoration: none !important;
  }
}

/* always show 'Repost' message in modal */
[data-testid="repostModal"] > div > [data-testid="repostBtn"] > div {
  visibility: visible !important;
}

